--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ali Taghva",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.17.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/a-taghva/note-taker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/a-taghva/note-taker/issues"
+  },
+  "homepage": "https://github.com/a-taghva/note-taker#readme"
 }
