--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Ali Taghva",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "repository": {
     "type": "git",
